chore: preparar backend para deploy en Railway (perfil prod, CORS configurable)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>